--- a/index.html
+++ b/index.html
@@ -7,8 +7,163 @@
     <title> Motoristas | Food Finder</title>
     <script src="https://kit.fontawesome.com/eab2776de6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    :p
+    <header>
+        <nav>
+        <div class="left-icon">
+          <button id="menu-btn"><i class="fa-solid fa-bars"></i></button>
+        </div>
+        <div class="center-icon">
+          <a href="#" id="logo"><img src="img/logoff3.png" alt="Logo"></a>
+        </div>
+        <div class="right-icons">
+          <button id="notifications-btn"><i class="fa-solid fa-bell"></i></button>
+          <button id="profile-btn"><i class="fa-solid fa-user"></i></button>
+        </div>
+        </nav>
+      </header>
+      <div class="container">
+        <p id="texto">Pedidos</p>
+        <button id="actualizar"><i class="fa-solid fa-arrows-rotate"></i></button>
+      </div>
+      <p> </p>
+      
+     <!--<div class="contenedor">
+        <div class="encabezado">
+          <div class="circulo">
+            <i class="fa fa-motorcycle"></i>
+          </div>
+        </div>
+        <div class="contenido">
+          <h1>BK</h1>
+          <p>FTE. A HOTEL CLARION,<br>
+            Boulevard Juan Pablo II.</p>
+          <button>Aceptar</button> 
+          <p> </p>
+          <button>Rechazar</button>
+        </div>
+      </div> --> 
+
+      <!--Menú deslizar-->
+      <nav>
+        <ul>
+        <div class="container">
+          <li><a href="#">Elemento 1</a>
+              <div class="contenedor">
+                <div class="encabezado">
+                  <div class="circulo">
+                    <i class="fa fa-motorcycle"></i>
+                  </div>
+                </div>
+                <div class="contenido">
+                  <h1>BK</h1>
+                  <p>FTE. A HOTEL CLARION,<br>
+                    Boulevard Juan Pablo II.</p>
+                  <button>Aceptar</button> 
+                  <p> </p>
+                  <button>Rechazar</button>
+                </div>
+              </div>
+        </li>
+
+        <div class="container"></div>
+          <li><a href="#">Elemento 2</a>
+            <div class="contenedor">
+                <div class="encabezado">
+                  <div class="circulo">
+                    <i class="fa fa-motorcycle"></i>
+                  </div>
+                </div>
+                <div class="contenido">
+                  <h1>BK</h1>
+                  <p>FTE. A HOTEL CLARION,<br>
+                    Boulevard Juan Pablo II.</p>
+                  <button>Aceptar</button> 
+                  <p> </p>
+                  <button>Rechazar</button>
+                </div>
+              </div>   
+        </li>
+
+        <div class="container"></div>
+        <li><a href="#">Elemento 3</a>
+          <div class="contenedor">
+              <div class="encabezado">
+                <div class="circulo">
+                  <i class="fa fa-motorcycle"></i>
+                </div>
+              </div>
+              <div class="contenido">
+                <h1>BK</h1>
+                <p>FTE. A HOTEL CLARION,<br>
+                  Boulevard Juan Pablo II.</p>
+                <button>Aceptar</button> 
+                <p> </p>
+                <button>Rechazar</button>
+              </div>
+            </div>   
+      </li>
+
+      <div class="container"></div>
+      <li><a href="#">Elemento 4</a>
+        <div class="contenedor">
+            <div class="encabezado">
+              <div class="circulo">
+                <i class="fa fa-motorcycle"></i>
+              </div>
+            </div>
+            <div class="contenido">
+              <h1>BK</h1>
+              <p>FTE. A HOTEL CLARION,<br>
+                Boulevard Juan Pablo II.</p>
+              <button>Aceptar</button> 
+              <p> </p>
+              <button>Rechazar</button>
+            </div>
+          </div>   
+    </li>
+
+    <div class="container"></div>
+    <li><a href="#">Elemento 5</a>
+      <div class="contenedor">
+          <div class="encabezado">
+            <div class="circulo">
+              <i class="fa fa-motorcycle"></i>
+            </div>
+          </div>
+          <div class="contenido">
+            <h1>BK</h1>
+            <p>FTE. A HOTEL CLARION,<br>
+              Boulevard Juan Pablo II.</p>
+            <button>Aceptar</button> 
+            <p> </p>
+            <button>Rechazar</button>
+          </div>
+        </div>   
+  </li>
+
+  <div class="container"></div>
+  <li><a href="#">Elemento 6</a>
+    <div class="contenedor">
+        <div class="encabezado">
+          <div class="circulo">
+            <i class="fa fa-motorcycle"></i>
+          </div>
+        </div>
+        <div class="contenido">
+          <h1>BK</h1>
+          <p>FTE. A HOTEL CLARION,<br>
+            Boulevard Juan Pablo II.</p>
+          <button>Aceptar</button> 
+          <p> </p>
+          <button>Rechazar</button>
+        </div>
+      </div>   
+</li>
+        </ul>
+      </nav>
+
 </body>
 </html>
