--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                   </div>
                 </div>
                 <div class="contenido">
-                  <h1>BK</h1>
-                  <p>FTE. A HOTEL CLARION,<br>
+                  <h1>Burger King</h1>
+                  <p id="t">FTE. A HOTEL CLARION,<br>
                     Boulevard Juan Pablo II.</p>
                   <button>Aceptar</button> 
                   <p> </p>
@@ -77,8 +77,8 @@
                   </div>
                 </div>
                 <div class="contenido">
-                  <h1>BK</h1>
-                  <p>FTE. A HOTEL CLARION,<br>
+                  <h1>Burger King</h1>
+                  <p id="t">FTE. A HOTEL CLARION,<br>
                     Boulevard Juan Pablo II.</p>
                   <button>Aceptar</button> 
                   <p> </p>
@@ -96,8 +96,8 @@
                 </div>
               </div>
               <div class="contenido">
-                <h1>BK</h1>
-                <p>FTE. A HOTEL CLARION,<br>
+                <h1>Burger King</h1>
+                <p id="t">FTE. A HOTEL CLARION,<br>
                   Boulevard Juan Pablo II.</p>
                 <button>Aceptar</button> 
                 <p> </p>
@@ -115,8 +115,8 @@
               </div>
             </div>
             <div class="contenido">
-              <h1>BK</h1>
-              <p>FTE. A HOTEL CLARION,<br>
+              <h1>Burger King</h1>
+              <p id="t">FTE. A HOTEL CLARION,<br>
                 Boulevard Juan Pablo II.</p>
               <button>Aceptar</button> 
               <p> </p>
@@ -134,8 +134,8 @@
             </div>
           </div>
           <div class="contenido">
-            <h1>BK</h1>
-            <p>FTE. A HOTEL CLARION,<br>
+            <h1>Burger King</h1>
+            <p id="t">FTE. A HOTEL CLARION,<br>
               Boulevard Juan Pablo II.</p>
             <button>Aceptar</button> 
             <p> </p>
@@ -153,9 +153,9 @@
           </div>
         </div>
         <div class="contenido">
-          <h1>BK</h1>
-          <p>FTE. A HOTEL CLARION,<br>
-            Boulevard Juan Pablo II.</p>
+          <h1>Burger King</h1>
+          <p id="t">FTE. A HOTEL CLARION,<br>
+            Boulevard Juan Pablo II.</p>  <p> </p>
           <button>Aceptar</button> 
           <p> </p>
           <button>Rechazar</button>
