iconos botones, otros

--- a/index.html
+++ b/index.html
@@ -59,11 +59,14 @@
                 </div>
                 <div class="contenido">
                   <h1>Burger King</h1>
-                  <p id="t">FTE. A HOTEL CLARION,<br>
+                  <p id="t">FTE. A HOTEL CLARION, <br>
                     Boulevard Juan Pablo II.</p>
-                  <button>Aceptar</button> 
-                  <p> </p>
-                  <button>Rechazar</button>
+                    <p id="nombre-cliente">Cliente</p>
+                    <p id="direccion-cliente">Dirección cliente</p>
+                    <p id="metodo-pago">Método de pago</p>
+                  <button class="boton-aceptar"><i class="fa-solid fa-circle-check"></i>  Aceptar</button> 
+                  <p></p>
+                  <button class="boton-rechazar"><i class="fa-solid fa-circle-xmark"></i>  Rechazar</button>
                 </div>
               </div>
         </li>
@@ -80,10 +83,12 @@
                   <h1>Burger King</h1>
                   <p id="t">FTE. A HOTEL CLARION,<br>
                     Boulevard Juan Pablo II.</p>
-                  <button>Aceptar</button> 
-                  <p> </p>
-                  <button>Rechazar</button>
-                </div>
+                    <p id="nombre-cliente">Cliente</p>
+                    <p id="direccion-cliente">Dirección cliente</p>
+                    <p id="metodo-pago">Método de pago</p>
+                    <button class="boton-aceptar"><i class="fa-solid fa-circle-check"></i>  Aceptar</button> 
+                    <p></p>
+                    <button class="boton-rechazar"><i class="fa-solid fa-circle-xmark"></i>  Rechazar</button>                </div>
               </div>   
         </li>
 
@@ -99,10 +104,12 @@
                 <h1>Burger King</h1>
                 <p id="t">FTE. A HOTEL CLARION,<br>
                   Boulevard Juan Pablo II.</p>
-                <button>Aceptar</button> 
-                <p> </p>
-                <button>Rechazar</button>
-              </div>
+                  <p id="nombre-cliente">Cliente</p>
+                  <p id="direccion-cliente">Dirección cliente</p>
+                  <p id="metodo-pago">Método de pago</p>
+                  <button class="boton-aceptar"><i class="fa-solid fa-circle-check"></i>  Aceptar</button> 
+                  <p></p>
+                  <button class="boton-rechazar"><i class="fa-solid fa-circle-xmark"></i>  Rechazar</button>              </div>
             </div>   
       </li>
 
@@ -118,10 +125,12 @@
               <h1>Burger King</h1>
               <p id="t">FTE. A HOTEL CLARION,<br>
                 Boulevard Juan Pablo II.</p>
-              <button>Aceptar</button> 
-              <p> </p>
-              <button>Rechazar</button>
-            </div>
+                <p id="nombre-cliente">Cliente</p>
+                <p id="direccion-cliente">Dirección cliente</p>
+                <p id="metodo-pago">Método de pago</p>
+                <button class="boton-aceptar"><i class="fa-solid fa-circle-check"></i>  Aceptar</button> 
+                <p></p>
+                <button class="boton-rechazar"><i class="fa-solid fa-circle-xmark"></i>  Rechazar</button>          </div>
           </div>   
     </li>
 
@@ -137,9 +146,12 @@
             <h1>Burger King</h1>
             <p id="t">FTE. A HOTEL CLARION,<br>
               Boulevard Juan Pablo II.</p>
-            <button>Aceptar</button> 
-            <p> </p>
-            <button>Rechazar</button>
+              <p id="nombre-cliente">Cliente</p>
+              <p id="direccion-cliente">Dirección cliente</p>
+              <p id="metodo-pago">Método de pago</p>
+              <button class="boton-aceptar"><i class="fa-solid fa-circle-check"></i>  Aceptar</button> 
+              <p></p>
+              <button class="boton-rechazar"><i class="fa-solid fa-circle-xmark"></i>  Rechazar</button>
           </div>
         </div>   
   </li>
@@ -155,11 +167,13 @@
         <div class="contenido">
           <h1>Burger King</h1>
           <p id="t">FTE. A HOTEL CLARION,<br>
-            Boulevard Juan Pablo II.</p>  <p> </p>
-          <button>Aceptar</button> 
-          <p> </p>
-          <button>Rechazar</button>
-        </div>
+            Boulevard Juan Pablo II.</p>
+            <p id="nombre-cliente">Cliente</p>
+            <p id="direccion-cliente">Dirección cliente</p>
+            <p id="metodo-pago">Método de pago</p>
+            <button class="boton-aceptar"><i class="fa-solid fa-circle-check"></i>  Aceptar</button> 
+            <p></p>
+            <button class="boton-rechazar"><i class="fa-solid fa-circle-xmark"></i>  Rechazar</button>        </div>
       </div>   
 </li>
         </ul>
